<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_avenger"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/btChangeUser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="please enter here"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btChangeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="textReader"
        android:text="@string/change_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_of_the_album_dark_side_of_the_moon_by_pink_floyd"
        android:src="@drawable/album"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btChangeUser" />

    <TextView
        android:id="@+id/tvSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAlbum" />

    <TextView
        android:id="@+id/singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/pink_floyd_david_gilmour_roger_waters_syd_barrett_richard_wright_nick_mason_bob_klose"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSong"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvPlayTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singer"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/btPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/previous"
        android:onClick="skipPrevious"
        android:text="@string/previous"
        app:layout_constraintEnd_toStartOf="@+id/btPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayTimes" />

    <ImageButton
        android:id="@+id/btPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addPlayTimes"
        android:text="@string/play"
        android:src="@drawable/play"
        app:layout_constraintEnd_toStartOf="@+id/btNext"
        app:layout_constraintStart_toEndOf="@+id/btPrevious"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayTimes" />

    <ImageButton
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/next"
        android:onClick="skipNext"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btPlay"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayTimes" />

</androidx.constraintlayout.widget.ConstraintLayout>