<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="please enter here"
            android:inputType="text"
            android:text="@string/first_avenger"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginEnd="120dp"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/btChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="textReader"
            android:text="@string/change_user"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivAlbum"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:contentDescription="@string/image_of_the_album_dark_side_of_the_moon_by_pink_floyd"
            android:longClickable="true"
            android:src="@drawable/album" />

        <TextView
            android:id="@+id/tvSong"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/pink_floyd_david_gilmour_roger_waters_syd_barrett_richard_wright_nick_mason_bob_klose"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvPlayTimes"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btPrevious"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/previous"
            android:layout_weight="1"
            android:contentDescription="@string/skip_previous_button"
            android:onClick="skipPrevious" />

        <ImageButton
            android:id="@+id/btPlay"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play_button"
            android:onClick="addPlayTimes"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/next"
            android:layout_weight="1"
            android:contentDescription="@string/skip_next_button"
            android:onClick="skipNext" />

    </LinearLayout>




</LinearLayout>
